klayout/TODO
2025/10/23, just for record

c++ -c -O2 -I/usr/pkg/include/python -pthread -I/usr/pkg/include -I/usr/include -I/usr/pkg/include/python3.13 -I/usr/pkg/qt5/include -I/usr/pkg/include/glib-2.0 -I/usr/pkg/include/gio-unix-2.0 -I/usr/pkg/lib/glib-2.0/include -I/usr/pkg/include/harfbuzz -I/usr/pkg/include/freetype2 -I/usr/X11R7/include -I/usr/X11R7/include/libdrm -I/usr/pkg/include/gstreamer-1.0 -Wno-template-id-cdtor -O2 -Wno-register -D_NETBSD_SOURCE -I/usr/pkg/include -I/usr/include -I/usr/include/krb5 -I/usr/pkg/lib/dbus-1.0/include/dbus -I/usr/pkg/include/glib-2.0 -I/usr/pkg/include/gio-unix-2.0 -I/usr/pkg/lib/glib-2.0/include -I/usr/pkg/include/harfbuzz -I/usr/pkg/include/freetype2 -I/usr/X11R7/include -I/usr/X11R7/include/libdrm -std=c++11 -fvisibility=hidden -Wall -Wextra -pedantic -Woverloaded-virtual -Wsynth -Wno-deprecated -Wno-long-long -Wno-strict-aliasing -Wno-deprecated-declarations -fPIC -DHAVE_QTBINDINGS -DHAVE_PYTHON -DHAVE_GIT2 -DHAVE_RUBY -DHAVE_RUBY_VERSION_CODE=30209 -DHAVE_QT -DHAVE_QT_UITOOLS -DHAVE_QT_NETWORK -DHAVE_QT_SQL -DHAVE_QT_SVG -DHAVE_QT_PRINTSUPPORT -DHAVE_QT_MULTIMEDIA -DHAVE_QT_DESIGNER -DHAVE_QT_XML -DKLAYOUT_VERSION=0.30.4 -DKLAYOUT_VERSION_REV=LatestSourcePackage -DKLAYOUT_VERSION_DATE=2025-10-24 -DKLAYOUT_MAJOR_VERSION=0 -DKLAYOUT_MINOR_VERSION=30 -DKLAYOUT_TINY_VERSION=4 -DMAKE_TL_LIBRARY -DQT_NO_DEBUG -DQT_PRINTSUPPORT_LIB -DQT_DESIGNER_LIB -DQT_UIPLUGIN_LIB -DQT_MULTIMEDIAWIDGETS_LIB -DQT_SVG_LIB -DQT_UITOOLS_LIB -DQT_WIDGETS_LIB -DQT_MULTIMEDIA_LIB -DQT_GUI_LIB -DQT_XML_LIB -DQT_XMLPATTERNS_LIB -DQT_NETWORK_LIB -DQT_SQL_LIB -DQT_CORE_LIB -I../../../src/tl/tl -I. -I/usr/pkg/qt5/include -I/usr/pkg/qt5/include/QtPrintSupport -I/usr/pkg/qt5/include/QtDesigner -I/usr/pkg/qt5/include/QtUiPlugin -I/usr/pkg/qt5/include/QtMultimediaWidgets -I/usr/pkg/qt5/include/QtSvg -I/usr/pkg/qt5/include/QtUiTools -I/usr/pkg/qt5/include/QtWidgets -I/usr/pkg/qt5/include/QtMultimedia -I/usr/pkg/qt5/include/QtGui -I/usr/pkg/qt5/include/QtXml -I/usr/pkg/qt5/include/QtXmlPatterns -I/usr/pkg/qt5/include/QtNetwork -I/usr/pkg/qt5/include/QtSql -I/usr/pkg/qt5/include/QtCore -I. -I/usr/X11R7/include -I/usr/X11R7/include/libdrm -I/usr/pkg/include -I/usr/pkg/qt5/mkspecs/netbsd-g++ -o tlList.o ../../../src/tl/tl/tlList.cc
../../../src/tl/tl/tlTimer.cc:277:4: error: #error Unsupported platform
  277 | #  error Unsupported platform
      |    ^~~~~
